	Fixed bug where IE 11 would move focus to menubar/toolbar when using the tab key in a form with an editor.
	Fixed bug where drag/drop in Safari on Mac didn't work properly due to lack of support for modern dataTransfer object.
	Fixed bug where the remove event wasn't properly executed when the editor instances where removed.
Version 4.0.18 (2014-02-27)
	Fixed bug where images would get class false/undefined when initially created.
Version 4.0.17 (2014-02-26)
	Added much better wai-aria accessibility support when it comes to keyboard navigation of complex UI controls.
	Added dfn,code,samp,kbd,var,cite,mark,q elements to the default remove formats list. Patch contributed by Naim Hammadi.
	Added var,cite,dfn,code,mark,q,sup,sub to the list of elements that gets cloned on enter. Patch contributed by Naim Hammadi.
	Added new visual_anchor_class option to specify a custom class for inline anchors. Patch contributed by Naim Hammadi.
	Added support for paste_data_images on WebKit/Blink when the user pastes image data.
	Added support for highlighting the video icon when a video is added that produces an iframe. Patch contributed by monkeydiane.
	Added image_class_list/link_class_list options to image/link dialogs to let the user select classes.
	Fixed bug where the ObjectResizeStart event didn't get fired properly by the ControlSelection class.
	Fixed bug where the autolink plugin would steal focus when loaded on IE 9+.
	Fixed bug where the editor save method would remove the current selection when called on an inline editor.
	Fixed bug where the formatter would merge span elements with parent bookmarks if an id format was used.
	Fixed bug where WebKit/Blink browsers would scroll to the top of the editor when pasting into an empty element.
	Fixed bug where removing the editor would cause an error about wrong document on IE 11 under specific circumstances.
	Fixed bug where Gecko would place the caret at an incorrect location when using backspace.