@@ -21,6 +21,8 @@ define("tinymce/FocusManager", [
 	"tinymce/dom/DOMUtils",
 	"tinymce/Env"
 ], function(DOMUtils, Env) {
+	var selectionChangeHandler, documentFocusInHandler, DOM = DOMUtils.DOM;
+
 	/**
 	 * Constructs a new focus manager instance.
 	 *
@@ -68,7 +70,7 @@ define("tinymce/FocusManager", [
 		}
 
 		function isUIElement(elm) {
-			return !!DOMUtils.DOM.getParent(elm, FocusManager.isEditorUIElement);
+			return !!DOM.getParent(elm, FocusManager.isEditorUIElement);
 		}
 
 		function isNodeInBodyOfEditor(node, editor) {
@@ -84,7 +86,7 @@ define("tinymce/FocusManager", [
 		}
 
 		function registerEvents(e) {
-			var editor = e.editor, selectionChangeHandler;
+			var editor = e.editor;
 
 			editor.on('init', function() {
 				// On IE take selection snapshot onbeforedeactivate
@@ -124,25 +126,22 @@ define("tinymce/FocusManager", [
 					});
 
 					// Handles the issue with WebKit not retaining selection within inline document
-					// If the user releases the mouse out side the body while selecting a nodeChange won't
-					// fire and there for the selection snapshot won't be stored
-					// TODO: Optimize this since we only need to bind these on the active editor
-					if (Env.webkit) {
+					// If the user releases the mouse out side the body since a mouse up event wont occur on the body
+					if (Env.webkit && !selectionChangeHandler) {
 						selectionChangeHandler = function() {
-							var rng = editor.selection.getRng();
+							var activeEditor = editorManager.activeEditor;
 
-							// Store when it's non collapsed
-							if (!rng.collapsed) {
-								editor.lastRng = rng;
+							if (activeEditor && activeEditor.selection) {
+								var rng = activeEditor.selection.getRng();
+
+								// Store when it's non collapsed
+								if (rng && !rng.collapsed) {
+									editor.lastRng = rng;
+								}
 							}
 						};
 
-						// Bind selection handler
-						DOMUtils.DOM.bind(document, 'selectionchange', selectionChangeHandler);
-
-						editor.on('remove', function() {
-							DOMUtils.DOM.unbind(document, 'selectionchange', selectionChangeHandler);
-						});
+						DOM.bind(document, 'selectionchange', selectionChangeHandler);
 					}
 				}
 			});
@@ -194,28 +193,41 @@ define("tinymce/FocusManager", [
 					}
 				}, 0);
 			});
+
+			if (!documentFocusInHandler) {
+				documentFocusInHandler = function(e) {
+					var activeEditor = editorManager.activeEditor;
+
+					if (activeEditor && e.target.ownerDocument == document) {
+						// Check to make sure we have a valid selection
+						if (activeEditor.selection) {
+							activeEditor.selection.lastFocusBookmark = createBookmark(activeEditor.lastRng);
+						}
+
+						// Fire a blur event if the element isn't a UI element
+						if (!isUIElement(e.target) && editorManager.focusedEditor == activeEditor) {
+							activeEditor.fire('blur', {focusedEditor: null});
+							editorManager.focusedEditor = null;
+						}
+					}
+				};
+
+				// Check if focus is moved to an element outside the active editor by checking if the target node
+				// isn't within the body of the activeEditor nor a UI element such as a dialog child control
+				DOM.bind(document, 'focusin', documentFocusInHandler);
+			}
 		}
 
-		// Check if focus is moved to an element outside the active editor by checking if the target node
-		// isn't within the body of the activeEditor nor a UI element such as a dialog child control
-		DOMUtils.DOM.bind(document, 'focusin', function(e) {
-			var activeEditor = editorManager.activeEditor;
-
-			if (activeEditor && e.target.ownerDocument == document) {
-				// Check to make sure we have a valid selection
-				if (activeEditor.selection) {
-					activeEditor.selection.lastFocusBookmark = createBookmark(activeEditor.lastRng);
-				}
-
-				// Fire a blur event if the element isn't a UI element
-				if (!isUIElement(e.target) && editorManager.focusedEditor == activeEditor) {
-					activeEditor.fire('blur', {focusedEditor: null});
-					editorManager.focusedEditor = null;
-				}
+		function unregisterDocumentEvents() {
+			if (!editorManager.activeEditor) {
+				DOM.unbind(document, 'selectionchange', selectionChangeHandler);
+				DOM.unbind(document, 'focusin', documentFocusInHandler);
+				selectionChangeHandler = documentFocusInHandler = null;
 			}
-		});
+		}
 
 		editorManager.on('AddEditor', registerEvents);
+		editorManager.on('RemoveEditor', unregisterDocumentEvents);
 	}
 
 	/**
